--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "project-3",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "gulpfile.js",
   "dependencies": {
     "auto-prefixer": "^0.4.2",
     "autoprefixer": "^10.2.5",
@@ -29,5 +29,11 @@
     "url": "https://github.com/RevenMacleff/uber_project/issues"
   },
   "homepage": "https://github.com/RevenMacleff/uber_project#readme",
-  "description": ""
+  "description": "",  
+  "browserslist": [
+  "last 1 version",
+  "> 1%",
+  "maintained node versions",
+  "not dead"
+]
 }
